# mobipick_api

./: CMakeLists.txt  README.md  package.xml  setup.py
mobipick_api/: __init__.py  core.py  manipulation.py  perception.py  semantic_environment_rep.py
